--- a/iutil_lib/build.gradle
+++ b/iutil_lib/build.gradle
@@ -23,4 +23,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'org.jsoup:jsoup:1.8.2'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.google.code.gson:gson:2.3.1'
+    compile 'com.j256.ormlite:ormlite-core:4.48'
+    compile 'com.j256.ormlite:ormlite-android:4.48'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
 }
