--- a/iutil_lib/build.gradle
+++ b/iutil_lib/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
+    compile 'com.jakewharton:butterknife:6.1.0'
 }
