--- a/iutil_lib/build.gradle
+++ b/iutil_lib/build.gradle
@@ -21,11 +21,13 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'org.jsoup:jsoup:1.8.2'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.j256.ormlite:ormlite-core:4.48'
-    compile 'com.j256.ormlite:ormlite-android:4.48'
-    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
-    compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'org.jsoup:jsoup:1.8.2'//解析html文件神器
+    compile 'com.nineoldandroids:library:2.4.0'//属性动画
+    compile 'com.google.code.gson:gson:2.3.1'//解析json
+    compile 'com.j256.ormlite:ormlite-core:4.48'//轻量级数据库辅助工具类
+    compile 'com.j256.ormlite:ormlite-android:4.48'//
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'//图片缓存
+    compile 'com.jakewharton:butterknife:6.1.0'//依赖注入辅助初始化view
+    compile 'com.facebook.fresco:fresco:0.5.0+'//facebook输出的图片缓存
+    compile 'com.squareup.picasso:picasso:2.5.2'//square的图片缓存
 }
